# ner-api

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: api.py  spacy_extractor.py
tests/: test_api.py
