[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
gunicorn = "^20.1.0"
spacy = "^3.0.5"

[tool.poetry.dependencies.xx_ent_wiki_sm]
url = "https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.0.0/xx_ent_wiki_sm-3.0.0.tar.gz"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119